test: add comprehensive unit test coverage for all classes
- Add unit tests for configuration classes (JwtUtil, JwtFilter, DataSeeder, AuditorAwareImpl, I18nConfig, UserDetailsServiceImpl)
- Add unit tests for exception classes (GlobalExceptionHandler, ErrorBody, DomainException, ResourceNotFoundException, ResourceAlreadyExistsException, CsvProcessingException, PdfProcessingException)
- Add unit tests for mapper classes (TransactionMapper, BudgetMapper, AccountMapper, CategoryMapper, CreditCardMapper, UserMapper, UserPreferencesMapper, DescriptionMappingMapper)
- Add unit tests for TransactionSpecFactory specification builder
- Add unit tests for AuthenticatedUser model
- Add integration tests for controllers (BudgetPreferencesController, UserPreferencesController, BudgetTrackingController, InstallmentGroupController, CsvImportController)
- Add service tests (AdvancedExcelExportService, BanrisulPdfParserService, DuplicateDetectionService, EmailService, ExportService, BudgetPreferencesService, SecurityService)
- Include new features: PDF parsing, duplicate detection, advanced Excel export, security service
- Add Postman collection for API testing

All 584 tests passing with comprehensive branch coverage.